# Homomorphic-Encryption

./: CMakeLists.txt  README  README.md  simple-add.cpp
